agregar nombre al pie de pagina

--- a/contacto.html
+++ b/contacto.html
@@ -88,6 +88,7 @@
                 <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Francisco Inostroza</a></li>
                 <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Norman Pohl</a></li>
                 <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Javiera Santa Maria</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Fabian Diaz Lillo</a></li>
             </ul>
             <p class="text-center text-muted">&copy; 2023</p>
         </footer>
