--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
                 <p class="lead">
                     Envios a Todo Chile.
                 </p>
+                <p class="lead">
+                    Párrafo creado para el ejercicio grupal 7. Jeremy
+                </p>
             </article>
         </section>
         <section class="galeria container my-5">
