--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 <p class="lead">
                     Párrafo creado para el ejercicio grupal 7. Jeremy
                 </p>
+                <p class="lead">Otro párrafo</p>
             </article>
         </section>
         <section class="galeria container my-5">
