--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Norman Pohl</a></li>
                 <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Javiera Santa Maria</a></li>
             </ul>
-            <p class="text-center text-muted">&copy; 2023</p>
+            <p class="text-center text-muted">&copy; 2023.</p>
         </footer>
     </div>
 
