agregue texto a linea 62 index

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <article id="acerca-de-nosotros">
                 <h2 class="display-4">Acerca de Nosotros</h2>
                 <p class="lead">
-                    Somos un emprendimiento que vendemos los productos que tú necesitas.
+                    Somos un emprendimiento que vendemos los productos que tú necesitas del recuerdo, vintage y tecnología.
                 </p>
                 <p class="lead">
                     Estamos ubicados en Santiago, Concepción y Linares.
