creación de catalogo.html

--- a/catalogo.html
+++ b/catalogo.html
@@ -41,7 +41,7 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="catalogo.html">Catalogo</a>
+                        <a class="nav-link" href="#">Catalogo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contacto.html">Contacto</a>
@@ -55,34 +55,7 @@
     </nav>
 
     <main class="container">
-        <section class="container my-2">
-            <article id="acerca-de-nosotros">
-                <h2 class="display-4">Acerca de Nosotros</h2>
-                <p class="lead">
-                    Somos un emprendimiento que vendemos los productos que tú necesitas.
-                </p>
-                <p class="lead">
-                    Estamos ubicados en Santiago, Concepción y Linares.
-                </p>
-                <p class="lead">
-                    Envios a Todo Chile.
-                </p>
-                <p class="lead">
-                    Párrafo creado para el ejercicio grupal 7. Jeremy
-                </p>
-                <p class="lead">Otro párrafo</p>
-            </article>
-        </section>
-        <section class="galeria container my-5">
-            <h2 class="display-6 m-3">
-                Galeria de imágenes
-            </h2>
-            <div class="container ">
-                <img class="  img-fluid img-thumbnail rounded py-2 " width="350" src="assets/img/Nintendo.jpg" alt="nintendo">
-                <img class="  img-fluid img-thumbnail rounded py-2 " width="350" src="assets/img/atari1.jpg" alt="atari">
-                <img class="  img-fluid img-thumbnail rounded py-2 " src="assets/img/radio.jpg" alt="radio">
-            </div>
-        </section>
+        <h2 class="display-4">Catalogo</h2>
     </main>
 
     <div class="container">
