cambios en fuente

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <!--styles.css-->
     <link rel="stylesheet" href="assets/css/style.css">
     <!--fuentes de google-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel=<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@600&display=swap" rel="stylesheet">
 
     <!--jQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
@@ -57,9 +57,9 @@
     <main class="container">
         <section class="container my-2">
             <article id="acerca-de-nosotros">
-                <h2 class="display-4">Acerca de Nosotros</h2>
+                <h2 class="display-4">Somos Te Lo Vendo!!</h2>
                 <p class="lead">
-                    Somos un emprendimiento que vendemos los productos que tú necesitas del recuerdo, vintage y tecnología.
+                    Es esta tienda online encontrarás objetos, discos, consolas y una gran selección de productos retro y vintage ¡No te los pierdas!
                 </p>
                 <p class="lead">
                     Estamos ubicados en Santiago, Concepción y Linares.
