--- a/catalogo.html
+++ b/catalogo.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <!--styles.css-->
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/catalogo.css">
+
     <!--fuentes de google-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,15 +25,17 @@
     <!--Bootstrap css-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+    <!--FancyBox-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 
     <title>Te lo vendo</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
-        <div class="container-fluid col-lg-10">
+        <div class="container-fluid col-10">
             <a class="navbar-brand dis" href="/index.html">Te lo vendo</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -54,9 +59,37 @@
         </div>
     </nav>
 
+
     <main class="container">
-        <h2 class="display-4">Catalogo</h2>
-    </main>
+
+        <section class="galeria container my-10">
+            <h2 class="display-6 m-3">
+                Catalogo
+            </h2>
+            <div class="container ">
+                <a data-fancybox="gallery" href="./assets/img/atari1.jpg">
+                    <img class="  img-fluid img-thumbnail  py-2 " width="350" src="assets/img/Nintendo.jpg" alt="nintendo">
+                </a>
+                <a data-fancybox="gallery" href="./assets/img/Nintendo.jpg">
+                    <img class="  img-fluid img-thumbnail  py-2 " width="350" src="assets/img/atari1.jpg" alt="atari">
+                </a>
+                <a data-fancybox="gallery" href="./assets/img/radio.jpg">
+                    <img class="  img-fluid img-thumbnail  py-2 " width="350" src="assets/img/radio.jpg" alt="radio">
+                </a>
+                <a data-fancybox="gallery" href="./assets/img/fax.jpg">
+                    <img class="  img-fluid img-thumbnail  py-2 " width="350" src="assets/img/fax.jpg" alt="nintendo">
+                </a>
+                <a data-fancybox="gallery" href="./assets/img/nokia.jpg">
+                    <img class="  img-fluid img-thumbnail  py-2 " width="350" src="assets/img/nokia.jpg" alt="atari">
+                </a>
+                <a data-fancybox="gallery" href="./assets/img/tornamesa.jpg">
+                    <img class="  img-fluid img-thumbnail  py-2 " width="350" src="assets/img/tornamesa.jpg" alt="radio">
+                </a>
+                <a data-fancybox="gallery " href="./assets/img/walkman.jpg">
+                    <img class="  img-fluid img-thumbnail  py-2 " width="350" src="assets/img/walkman.jpg" alt="radio">
+                </a>
+                </div>
+        </section>
 
     <div class="container">
         <footer class="py-3 mx-3 my-4">
@@ -74,6 +107,8 @@
     <!--Bootstrap .js-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
+    <!--catalogo.js-->
+    <script src="./assets/js/catalogo.js"></script>
 </body>
 
 </html>
