--- a/index.html
+++ b/index.html
@@ -71,22 +71,19 @@
             </article>
         </section>
 
-        <h2 class="display-6 m-3">
-            Galeria de imágenes
-        </h2>
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="assets/img/Nintendo.jpg" class="d-block w-100" alt="...">
+                <img src="assets/img/Nintendo.jpg" class="d-block w-100" alt="Nintendo">
               </div>
               <div class="carousel-item">
-                <img src="assets/img/nokia.jpg" class="d-block w-100" alt="...">
+                <img src="assets/img/nokia.jpg" class="d-block w-100" alt="Nokia">
               </div>
               <div class="carousel-item">
-                <img src="assets/img/atari1.jpg" class="d-block w-100" alt="...">
+                <img src="assets/img/atari1.jpg" class="d-block w-100" alt="Atari">
               </div>
               <div class="carousel-item">
-                <img src="assets/img/vinilos.jpg" class="d-block w-100" alt="...">
+                <img src="assets/img/vinilos.jpg" class="d-block w-100" alt="Vinilo">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
