--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Catalogo</a>
+                        <a class="nav-link" href="catalogo.html">Catalogo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contacto.html">Contacto</a>
@@ -74,16 +74,24 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="assets/img/Nintendo.jpg" class="d-block w-100" alt="Nintendo">
+                <a href="catalogo.html">
+                    <img src="assets/img/Nintendo.jpg" class="d-block w-100" alt="Nintendo">
+                </a>
               </div>
               <div class="carousel-item">
-                <img src="assets/img/nokia.jpg" class="d-block w-100" alt="Nokia">
+                <a href="catalogo.html">
+                    <img src="assets/img/nokia.jpg" class="d-block w-100" alt="Nokia">
+                </a>
               </div>
               <div class="carousel-item">
-                <img src="assets/img/atari1.jpg" class="d-block w-100" alt="Atari">
+                <a href="catalogo.html">
+                    <img src="assets/img/atari1.jpg" class="d-block w-100" alt="Atari">
+                </a>
               </div>
               <div class="carousel-item">
-                <img src="assets/img/vinilos.jpg" class="d-block w-100" alt="Vinilo">
+                <a href="catalogo.html">
+                    <img src="assets/img/vinilos.jpg" class="d-block w-100" alt="Vinilo">
+                </a>
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
