--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
     <main class="container">
         <section class="container my-2">
             <article id="acerca-de-nosotros">
-                <h2 class="display-4">Acerca de Nosotros</h2>
+                <h2 class="display-4">Somos Te Lo Vendo!!</h2>
                 <p class="lead">
-                    Somos un emprendimiento que vendemos los productos que tú necesitas.
+                    Es esta tienda online encontrarás objetos, discos, consolas y una gran selección de productos retro y vintage ¡No te los pierdas!
                 </p>
                 <p class="lead">
                     Estamos ubicados en Santiago, Concepción y Linares.
