cambie estadisticas por Productos

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="estadísticas.html">Estadísticas</a>
+                        <a class="nav-link" href="estadísticas.html">Productos</a>
                     </li>
                 </ul>
             </div>
