navbar y footer iguales en todos los html

--- a/contacto.html
+++ b/contacto.html
@@ -10,8 +10,7 @@
     <!--fuentes de google-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@600&display=swap" rel="stylesheet">
     <!--jQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
@@ -30,15 +29,15 @@
         <div class="container-fluid col-lg-10">
             <a class="navbar-brand dis" href="/index.html">Te lo vendo</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                        </button>
+                    <span class="navbar-toggler-icon"></span>
+                    </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Catalogo</a>
+                        <a class="nav-link" href="catalogo.html">Catalogo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contacto.html">Contacto</a>
@@ -82,6 +81,7 @@
     </main>
     <div class="container">
         <footer class="py-3 my-4">
+            <p class="text-center text-muted">Casa matriz: Santiago, Sucursales: Concepción y Linares.</p>
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                 <li class="nav-item"><a href=" " class="nav-link px-2 text-muted">Camila Barrera</a></li>
                 <li class="nav-item"><a href="https://github.com/jeremy-andres" class="nav-link px-2 text-muted">Jeremy Herrera</a></li>
