--- a/catalogo.html
+++ b/catalogo.html
@@ -8,13 +8,12 @@
 
     <!--styles.css-->
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="/assets/css/catalogo.css">
+    <link rel="stylesheet" href="assets/css/catalogo.css">
 
     <!--fuentes de google-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@600&display=swap" rel="stylesheet">
     <!--jQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
@@ -35,7 +34,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
-        <div class="container-fluid col-10">
+        <div class="container-fluid col-lg-10">
             <a class="navbar-brand dis" href="/index.html">Te lo vendo</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -46,7 +45,7 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Catalogo</a>
+                        <a class="nav-link" href="catalogo.html">Catalogo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contacto.html">Contacto</a>
@@ -88,27 +87,28 @@
                 <a data-fancybox="gallery " href="./assets/img/walkman.jpg">
                     <img class="  img-fluid img-thumbnail  py-2 " width="350" src="assets/img/walkman.jpg" alt="radio">
                 </a>
-                </div>
+            </div>
         </section>
 
-    <div class="container">
-        <footer class="py-3 mx-3 my-4">
-            <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-                <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Camila Barrera</a></li>
-                <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Jeremy Herrera</a></li>
-                <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Francisco Inostroza</a></li>
-                <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Norman Pohl</a></li>
-                <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Javiera Santa Maria</a></li>
-            </ul>
-            <p class="text-center text-muted">&copy; 2023</p>
-        </footer>
-    </div>
+        <div class="container">
+            <footer class="py-3 mx-3 my-4">
+                <p class="text-center text-muted">Casa matriz: Santiago, Sucursales: Concepción y Linares.</p>
+                <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                    <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Camila Barrera</a></li>
+                    <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Jeremy Herrera</a></li>
+                    <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Francisco Inostroza</a></li>
+                    <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Norman Pohl</a></li>
+                    <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Javiera Santa Maria</a></li>
+                </ul>
+                <p class="text-center text-muted">&copy; 2023</p>
+            </footer>
+        </div>
 
-    <!--Bootstrap .js-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <!--Bootstrap .js-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-    <!--catalogo.js-->
-    <script src="./assets/js/catalogo.js"></script>
+        <!--catalogo.js-->
+        <script src="./assets/js/catalogo.js"></script>
 </body>
 
 </html>
