--- a/index.html
+++ b/index.html
@@ -8,25 +8,24 @@
     <!--styles.css-->
     <link rel="stylesheet" href="assets/css/style.css">
     <!--fuentes de google-->
-    <link rel=<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@600&display=swap" rel="stylesheet">
 
     <!--jQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    
+
     <!--Plugin DataTable-->
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css" />
     <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
 
     <!--Bootstrap css & JS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 
     <title>Te lo vendo</title>
 
-    
+
 </head>
 
 <body>
@@ -77,26 +76,26 @@
 
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <a href="catalogo.html">
-                    <img src="assets/img/Nintendo.jpg" class="d-block w-100" alt="Nintendo">
-                </a>
-              </div>
-              <div class="carousel-item">
-                <a href="catalogo.html">
-                    <img src="assets/img/nokia.jpg" class="d-block w-100" alt="Nokia">
-                </a>
-              </div>
-              <div class="carousel-item">
-                <a href="catalogo.html">
-                    <img src="assets/img/atari1.jpg" class="d-block w-100" alt="Atari">
-                </a>
-              </div>
-              <div class="carousel-item">
-                <a href="catalogo.html">
-                    <img src="assets/img/vinilos.jpg" class="d-block w-100" alt="Vinilo">
-                </a>
-              </div>
+                <div class="carousel-item active">
+                    <a href="catalogo.html">
+                        <img src="assets/img/Nintendo.jpg" class="d-block w-100" alt="Nintendo">
+                    </a>
+                </div>
+                <div class="carousel-item">
+                    <a href="catalogo.html">
+                        <img src="assets/img/nokia.jpg" class="d-block w-100" alt="Nokia">
+                    </a>
+                </div>
+                <div class="carousel-item">
+                    <a href="catalogo.html">
+                        <img src="assets/img/atari1.jpg" class="d-block w-100" alt="Atari">
+                    </a>
+                </div>
+                <div class="carousel-item">
+                    <a href="catalogo.html">
+                        <img src="assets/img/vinilos.jpg" class="d-block w-100" alt="Vinilo">
+                    </a>
+                </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -106,11 +105,12 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
-          </div>
+        </div>
     </main>
 
     <div class="container">
         <footer class="py-3 mx-3 my-4">
+            <p class="text-center text-muted">Casa matriz: Santiago, Sucursales: Concepción y Linares.</p>
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                 <li class="nav-item"><a href=" " class="nav-link px-2 text-muted">Camila Barrera</a></li>
                 <li class="nav-item"><a href="https://github.com/jeremy-andres" class="nav-link px-2 text-muted">Jeremy Herrera</a></li>
@@ -121,6 +121,9 @@
             <p class="text-center text-muted">&copy; 2023</p>
         </footer>
     </div>
+
+    <!--Bootstrap .js-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </body>
 
