actualizado estaditistas en nombre de html y de index

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="estadísticas.html">Productos</a>
+                        <a class="nav-link" href="estadisticas.html">Productos</a>
                     </li>
                 </ul>
             </div>
