se elimina el tilde del href estadistica.html

--- a/contacto.html
+++ b/contacto.html
@@ -43,7 +43,7 @@
                         <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="estadísticas.html">Estadísticas</a>
+                        <a class="nav-link" href="estadisticas.html">Estadísticas</a>
                     </li>
                 </ul>
             </div>
