--- a/estadisticas.html
+++ b/estadisticas.html
@@ -46,7 +46,7 @@
                         <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="estadísticas.html">Estadísticas</a>
+                        <a class="nav-link" href="estadisticas.html">Estadísticas</a>
                     </li>
                 </ul>
             </div>
