cambi nombre estadistica por producto

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -46,7 +46,7 @@
                         <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="estadisticas.html">Estadísticas</a>
+                        <a class="nav-link" href="estadisticas.html">Productos</a>
                     </li>
                 </ul>
             </div>
@@ -55,7 +55,7 @@
 
 
     <main class="container mt-2">
-        <h2 class="display-4">Estadísticas</h2>
+        <h2 class="display-4">Lista de productos en venta</h2>
         <table class="table" id="estadisticas">
             <thead>
                 <tr>
