corrección de error en las imagenes linea 70 y 73

--- a/catalogo.html
+++ b/catalogo.html
@@ -67,10 +67,10 @@
             </h2>
             <div class="container ">
                 <a data-fancybox="gallery" href="./assets/img/atari1.jpg">
-                    <img class="  img-fluid img-thumbnail  py-2 " width="350" src="assets/img/Nintendo.jpg" alt="nintendo">
+                    <img class="  img-fluid img-thumbnail  py-2 " width="350" src="./assets/img/atari1.jpg" alt="nintendo">
                 </a>
                 <a data-fancybox="gallery" href="./assets/img/Nintendo.jpg">
-                    <img class="  img-fluid img-thumbnail  py-2 " width="350" src="assets/img/atari1.jpg" alt="atari">
+                    <img class="  img-fluid img-thumbnail  py-2 " width="350" src="./assets/img/Nintendo.jpg" alt="atari">
                 </a>
                 <a data-fancybox="gallery" href="./assets/img/fax.jpg">
                     <img class="  img-fluid img-thumbnail  py-2 " width="350" src="assets/img/fax.jpg" alt="nintendo">
